--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "nodemon",
-    "test": "node --experimental-vm-modules node_modules/.bin/jest",
-    "test:watch": "NODE_ENV=test jest --watch",
-    "test:coverage": "NODE_ENV=test jest --coverage"
+    "test": "node --experimental-vm-modules node_modules/.bin/jest --coverage",
+    "test:watch": "NODE_ENV=test jest --watch --coverage"
   },
   "dependencies": {
     "cors": "^2.8.5",
